--- a/package.json
+++ b/package.json
@@ -14,21 +14,40 @@
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@gsap/react": "^2.1.2",
+    "@react-spring/web": "^10.0.3",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
+    "@studio-freight/lenis": "^1.0.42",
+    "@tsparticles/preset-stars": "^3.2.0",
     "aos": "^2.3.4",
+    "d3": "^7.9.0",
     "emailjs-com": "^3.2.0",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "^12.26.2",
+    "gsap": "^3.14.2",
+    "install": "^0.13.0",
+    "lucide-react": "^0.562.0",
+    "npm": "^11.7.0",
     "preline": "^3.1.0",
     "react": "^19.1.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.1",
     "react-github-calendar": "^4.5.9",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-lottie": "^1.2.10",
+    "react-parallax-tilt": "^1.7.315",
     "react-router-dom": "^7.6.3",
     "react-scroll": "^1.9.3",
     "react-simple-typewriter": "^5.0.1",
+    "react-tooltip": "^5.30.0",
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
-    "tsparticles": "^3.8.1",
+    "three": "^0.182.0",
+    "tsparticles": "^3.9.1",
+    "tsparticles-preset-stars": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
     "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
